--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -14,7 +14,10 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
-
+    
+    env:
+      GDRIVE_CREDENTIALS_DATA: ${{ secrets.GDRIVE_CREDENTIALS_DATA }}
+    
     steps:
     - uses: actions/checkout@v2
     - name: Set up Python 3.6
