--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -28,6 +28,9 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+    - name: Download NLTK resources
+      run: |
+        python -m nltk.downloader all
     - name: Retraining
       working-directory: ./src
       run: |
