--- a/.github/workflows/ci-testing.yml
+++ b/.github/workflows/ci-testing.yml
@@ -3,7 +3,7 @@ on:
   pull_request:
     branches: [ main ]
 jobs:
-  run:
+  build:
     runs-on: [ubuntu-latest]
     env:
       GDRIVE_CREDENTIALS_DATA: ${{ secrets.GDRIVE_CREDENTIALS_DATA }}
