--- a/requirements.txt
+++ b/requirements.txt
@@ -81,6 +81,7 @@ pyasn1-modules==0.2.8
 pycparser==2.21
 pydot==1.4.2
 PyDrive2==1.10.0
+PyDrive==1.3.1
 pygit2==1.6.1
 Pygments==2.11.2
 pygtrie==2.4.2
