update retrain yml

--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -7,8 +7,8 @@ on:
   pull_request:
       branches:
         - main
-#     paths:
-#       - data-registry.dvc
+    paths:
+      - data-registry.dvc
 
 jobs:
   build:
